# rust_rest

./: .env  .env.test  Cargo.toml  LICENSE  README.md  docker-compose.yml  refinery.toml
.cargo/: config.toml
.github/workflows/: ci.yml
app/: Cargo.toml
axum-on-rails/: Cargo.toml
axum-on-rails-procs/: Cargo.toml
axum-on-rails-procs/src/: lib.rs
axum-on-rails/src/: config.rs  lib.rs  test_helpers.rs  util.rs
axum-on-rails/src/cli/: db.rs  env.rs  generate.rs  mod.rs  ui.rs
axum-on-rails/src/test/: helpers.rs
cli/: Cargo.toml
config/: Cargo.toml
config/src/: lib.rs
db/: Cargo.toml  seeds.sql
db/migrations/: 1674214685_create_users_table.sql  1674214687_create_users_table.sql  V1674214685__create_users_table.sql  V1674214687__create_users_table.sql  V1674214688__insert_admin_user.sql
migrations/: V1674214686__rename_users_table_to_tasks.sql
src/: config.rs  main.rs  routes.rs  state.rs  test_helpers.rs
src/controllers/: tasks.rs  users.rs
src/entities/: task.rs  user.rs
src/middlewares/: auth.rs
src/test/: helpers.rs
test-macro/: Cargo.toml
test-macro/src/: lib.rs
web/: Cargo.toml
web/src/: lib.rs  main.rs  state.rs
web/src/controllers/: tasks.rs
web/src/middlewares/: auth.rs
web/src/test/: helpers.rs
web/tests/: tasks_test.rs
web/tests/common/: mod.rs
